<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ngv_home"
            android:title="@string/ngv_home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/ngv_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/ngv_favorite"/>
        <item
            android:id="@+id/ngv_history"
            android:icon="@drawable/ic_history"
            android:title="@string/ngv_history" />
    </group>
    <item android:title="@string/ngv_account">
        <menu>
            <item
                android:id="@+id/ngv_my_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/ngv_myProfile"/>
            <item
                android:id="@+id/ngv_change_pass"
                android:icon="@drawable/ic_change_password"
                android:title="@string/ngv_change_password" />
        </menu>
    </item>
</menu>